404 hecho, ajustes finales a redireccionamiento del nav.

--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link rel="stylesheet" href="styles/estiloMainPage.css">
-        <link rel="stylesheet" href="styles/estilo404.css">
+        <link rel="stylesheet" href="styles/estiloNotFound.css">
         <script src="https://kit.fontawesome.com/15d8dc6e81.js" crossorigin="anonymous"></script>
         <link rel="icon" href="../multimedia/images/pokeSharpLogoProvisional.png" type="image/png">
         <title data-translate="title">PokeSharp - Actualizaciones</title>
@@ -13,7 +13,7 @@
         <header>
             <div id="header-container">
                 <div id="logo-container">
-                    <a href="../"> <img src="../multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormal"> </a>
+                    <a href="../"> <img src="multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormal"> </a>
                 </div>
                 <nav>
                     <ul>
@@ -30,7 +30,29 @@
                 </nav>
             </div>
         </header>
+        <main>
+            <div id="firstPage">
+                <h1><a href="../">¡Página no encontrada!</a></h1>
 
-        <h1>¡Página no encontrada!</h1>
+                <img src="multimedia/images/pikachu.png" alt="Pikachu" id="image">
+            </div>
+        </main>
+        <footer>
+            <div id="divFooter">
+                <img src="multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormalFooter">
+                <span id="CopyrightTextoFooter">&copy; 2025 PokeSharp</span>
+                <p data-translate="pPropiedadFooter">Todas las texturas, imágenes y otros activos utilizados pertenecen a sus respectivos propietarios.</p>
+                <p data-translate="pAfiliadoFooter">PokeSharp no está afiliado ni a Nintendo, Game Freak, ni a The Pokémon Company.</p>
+                <hr>
+                <div id="redesSocialesFooter">
+                    <a href="https://discord.gg/FqJ6ZgYRrU" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-discord"></i></a>
+                    <a href="https://x.com" target="_blank" rel="noopener noreferrer"> <i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="https://youtube.es" target="_blank" rel="noopener noreferrer"> <i class="fa-brands fa-youtube"></i></a>
+                </div>
+            </div>
+        </footer>
+
+        <!-- Scripts -->
+        <script src="scripts/scriptTraducciones.js" defer></script>
     </body>
 </html>
