--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div id="header-container">
                 <div id="logo-container">
                     <!-- Aqui hay un error, se baja un poco y no se centra bien con el atributo <a> -->
-                    <a href="/"> <img src="multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormal"> </a>
+                    <a href=""> <img src="multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormal"> </a>
                 </div>
 
                 <nav>
@@ -34,7 +34,6 @@
         </header>
 
         <main>
-
             <div id="rectanguloGrande">
                 <h2 id="versionJuego" data-translate="versionJuego">En desarrollo</h2>
                 <button class="button" id="btnDownload" onclick="download()">
