--- a/updates/index.html
+++ b/updates/index.html
@@ -18,7 +18,7 @@
                 </div>
                 <nav>
                     <ul>
-                        <li id="descargas"> <a data-translate="descargarNav" href="/">Descargar</a> </li>
+                        <li id="descargas"> <a data-translate="descargarNav" href="../">Descargar</a> </li>
                         <li id="notasParche"> <a data-translate="versionesNav" href="">Actualizaciones</a> </li>
                         <li id="discord"> <a data-translate="discordNav" href="https://discord.gg/FqJ6ZgYRrU" target="_blank" rel="noopener noreferrer">Discord</a> </li>
                         <li id="redesSociales"> <a data-translate="redesNav" href="../socialMedia/">Redes</a> </li>
@@ -71,6 +71,21 @@
             </div>
         </div>
 
+        <footer>
+            <div id="divFooter">
+                <img src="multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormalFooter">
+                <span id="CopyrightTextoFooter">&copy; 2025 PokeSharp</span>
+                <p data-translate="pPropiedadFooter">Todas las texturas, imágenes y otros activos utilizados pertenecen a sus respectivos propietarios.</p>
+                <p data-translate="pAfiliadoFooter">PokeSharp no está afiliado ni a Nintendo, Game Freak, ni a The Pokémon Company.</p>
+                <hr>
+                <div id="redesSocialesFooter">
+                    <a href="https://discord.gg/FqJ6ZgYRrU" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-discord"></i></a>
+                    <a href="https://x.com" target="_blank" rel="noopener noreferrer"> <i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="https://youtube.es" target="_blank" rel="noopener noreferrer"> <i class="fa-brands fa-youtube"></i></a>
+                </div>
+            </div>
+        </footer>
+        
         <!-- Scripts -->
         <script src="../scripts/scriptTraducciones.js" defer></script>
         <script src="../scripts/scriptOtros.js" defer></script>
