--- a/socialMedia/index.html
+++ b/socialMedia/index.html
@@ -15,16 +15,16 @@
             <div id="header-container">
                 <div id="logo-container">
                     <!-- Aqui hay un error, se baja un poco y no se centra bien con el atributo <a> -->
-                    <a href="/"> <img src="../multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormal"> </a>
+                    <a href="../"> <img src="../multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormal"> </a>
                 </div>
 
                 <nav>
                     <ul>
-                        <li id="descargas"> <a data-translate="descargarNav" href="">Descargar</a> </li>
-                        <li id="notasParche"> <a data-translate="versionesNav" href="/updates">Actualizaciones</a> </li>
+                        <li id="descargas"> <a data-translate="descargarNav" href="../">Descargar</a> </li>
+                        <li id="notasParche"> <a data-translate="versionesNav" href="../updates/">Actualizaciones</a> </li>
                         <li id="discord"> <a data-translate="discordNav" href="https://discord.gg/FqJ6ZgYRrU" target="_blank" rel="noopener noreferrer">Discord</a> </li>
                         <li id="redesSociales"> <a data-translate="redesNav" href="">Redes</a> </li>
-                        <li id="faq"> <a data-translate="faqNav" href="/faq">FAQ</a> </li>
+                        <li id="faq"> <a data-translate="faqNav" href="../faq/">FAQ</a> </li>
                         <li>
                             <img src="../multimedia/images/banderaEspanya.png" alt="Español" id="spanish-flag" class="flag">
                             <img src="../multimedia/images/banderaUnitedStates.png" alt="English" id="english-flag" class="flag">
@@ -37,7 +37,20 @@
         <
         <h1>Pendiente.</h1>
 
-
+        <footer>
+            <div id="divFooter">
+                <img src="multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormalFooter">
+                <span id="CopyrightTextoFooter">&copy; 2025 PokeSharp</span>
+                <p data-translate="pPropiedadFooter">Todas las texturas, imágenes y otros activos utilizados pertenecen a sus respectivos propietarios.</p>
+                <p data-translate="pAfiliadoFooter">PokeSharp no está afiliado ni a Nintendo, Game Freak, ni a The Pokémon Company.</p>
+                <hr>
+                <div id="redesSocialesFooter">
+                    <a href="https://discord.gg/FqJ6ZgYRrU" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-discord"></i></a>
+                    <a href="https://x.com" target="_blank" rel="noopener noreferrer"> <i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="https://youtube.es" target="_blank" rel="noopener noreferrer"> <i class="fa-brands fa-youtube"></i></a>
+                </div>
+            </div>
+        </footer>
         <!-- Scripts -->
         <script src="../scripts/scriptTraducciones.js" defer></script>
     </body>
