--- a/404.html
+++ b/404.html
@@ -13,15 +13,15 @@
         <header>
             <div id="header-container">
                 <div id="logo-container">
-                    <a href="/"> <img src="multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormal"> </a>
+                    <a href="index.html"> <img src="multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormal"> </a>
                 </div>
                 <nav>
                     <ul>
                         <li id="descargas"> <a data-translate="descargarNav" href="../">Descargar</a> </li>
-                        <li id="notasParche"> <a data-translate="versionesNav" href="">Actualizaciones</a> </li>
+                        <li id="notasParche"> <a data-translate="versionesNav" href="/updates/">Actualizaciones</a> </li>
                         <li id="discord"> <a data-translate="discordNav" href="https://discord.gg/FqJ6ZgYRrU" target="_blank" rel="noopener noreferrer">Discord</a> </li>
-                        <li id="redesSociales"> <a data-translate="redesNav" href="../socialMedia">Redes</a> </li>
-                        <li id="faq"> <a data-translate="faqNav" href="../faq/">FAQ</a> </li>
+                        <li id="redesSociales"> <a data-translate="redesNav" href="/socialMedia/">Redes</a> </li>
+                        <li id="faq"> <a data-translate="faqNav" href="/faq/">FAQ</a> </li>
                         <li>
                             <img src="multimedia/images/banderaEspanya.png" alt="Español" id="spanish-flag" class="flag">
                             <img src="multimedia/images/banderaUnitedStates.png" alt="English" id="english-flag" class="flag">
@@ -32,7 +32,7 @@
         </header>
         <main>
             <div id="firstPage">
-                <h1><a href="../">¡Página no encontrada!</a></h1>
+                <h1><a href="../PokeSharpWeb/">¡Página no encontrada!</a></h1>
 
                 <img src="multimedia/images/pikachu.png" alt="Pikachu" id="image">
             </div>
