Enlaces de 404.html fixed, supabase logo ajustar.

--- a/404.html
+++ b/404.html
@@ -13,11 +13,11 @@
         <header>
             <div id="header-container">
                 <div id="logo-container">
-                    <a href="index.html"> <img src="multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormal"> </a>
+                    <a href="../PokeSharpWeb/"> <img src="multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormal"> </a>
                 </div>
                 <nav>
                     <ul>
-                        <li id="descargas"> <a data-translate="descargarNav" href="../">Descargar</a> </li>
+                        <li id="descargas"> <a data-translate="descargarNav" href="../PokeSharpWeb/">Descargar</a> </li>
                         <li id="notasParche"> <a data-translate="versionesNav" href="/updates/">Actualizaciones</a> </li>
                         <li id="discord"> <a data-translate="discordNav" href="https://discord.gg/FqJ6ZgYRrU" target="_blank" rel="noopener noreferrer">Discord</a> </li>
                         <li id="redesSociales"> <a data-translate="redesNav" href="/socialMedia/">Redes</a> </li>
