--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@
                         <img src="multimedia/images/godotEngineLogo.png" alt="Godot Engine Logo" class="image">
                         <div class="tooltip">Godot Engine</div>
                     </div>
-                    <!-- falta database -->
+                   <!-- Falta ajustarlo <div class="image-item">
+                        <img src="multimedia/images/supabaseLogo.png" alt="Supabase Logo" class="image">
+                        <div class="tooltip">Supabase</div>
+                    </div>-->
                 </div>
             </div>
         </main>
