--- a/updates/index.html
+++ b/updates/index.html
@@ -38,7 +38,7 @@
 
         <!-- Esto será de forma dinámica -->
         <div id="secondPage">
-            <h2>Última versión</h2>
+            <h2 data-translate="lastVersion">Última versión</h2>
             <div class="update">
                 <details>
                     <summary>
@@ -49,7 +49,7 @@
                 </details>
             </div>
 
-            <h2>Versiones anteriores</h2>
+            <h2 data-translate="latestVersions">Versiones anteriores</h2>
             <div class="update">
                 <details>
                     <summary>
