--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="styles/estiloMainPage.css">
         <link rel="stylesheet" href="styles/estiloNotFound.css">
         <script src="https://kit.fontawesome.com/15d8dc6e81.js" crossorigin="anonymous"></script>
-        <link rel="icon" href="../multimedia/images/pokeSharpLogoProvisional.png" type="image/png">
+        <link rel="icon" href="PokeSharpWeb/multimedia/images/pokeSharpLogoProvisional.png" type="image/png">
         <title data-translate="title">PokeSharp - Actualizaciones</title>
     </head>
     <body>
@@ -23,7 +23,7 @@
                         <li id="redesSociales"> <a data-translate="redesNav" href="socialMedia">Redes</a> </li>
                         <li id="faq"> <a data-translate="faqNav" href="faq">FAQ</a> </li>
                         <li>
-                            <img src="multimedia/images/banderaEspanya.png" alt="Español" id="spanish-flag" class="flag">
+                            <img src="/PokeSharpWeb/multimedia/images/banderaEspanya.png" alt="Español" id="spanish-flag" class="flag">
                             <img src="multimedia/images/banderaUnitedStates.png" alt="English" id="english-flag" class="flag">
                         </li>
                     </ul>
