--- a/404.html
+++ b/404.html
@@ -3,8 +3,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <link rel="stylesheet" href="styles/estiloMainPage.css">
-        <link rel="stylesheet" href="styles/estiloNotFound.css">
+        <link rel="stylesheet" href="/PokeSharpWeb/styles/estiloMainPage.css">
+        <link rel="stylesheet" href="/PokeSharpWeb/styles/estiloNotFound.css">
         <script src="https://kit.fontawesome.com/15d8dc6e81.js" crossorigin="anonymous"></script>
         <link rel="icon" href="PokeSharpWeb/multimedia/images/pokeSharpLogoProvisional.png" type="image/png">
         <title data-translate="title">PokeSharp - Actualizaciones</title>
@@ -13,7 +13,7 @@
         <header>
             <div id="header-container">
                 <div id="logo-container">
-                    <a href="../PokeSharpWeb/"> <img src="multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormal"> </a>
+                    <a href="/PokeSharpWeb/"> <img src="multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormal"> </a>
                 </div>
                 <nav>
                     <ul>
@@ -24,7 +24,7 @@
                         <li id="faq"> <a data-translate="faqNav" href="faq">FAQ</a> </li>
                         <li>
                             <img src="/PokeSharpWeb/multimedia/images/banderaEspanya.png" alt="Español" id="spanish-flag" class="flag">
-                            <img src="multimedia/images/banderaUnitedStates.png" alt="English" id="english-flag" class="flag">
+                            <img src="/PokeSharpWeb/multimedia/images/banderaUnitedStates.png" alt="English" id="english-flag" class="flag">
                         </li>
                     </ul>
                 </nav>
