--- a/404.html
+++ b/404.html
@@ -7,17 +7,17 @@
         <link rel="stylesheet" href="/PokeSharpWeb/styles/estiloNotFound.css">
         <script src="https://kit.fontawesome.com/15d8dc6e81.js" crossorigin="anonymous"></script>
         <link rel="icon" href="PokeSharpWeb/multimedia/images/pokeSharpLogoProvisional.png" type="image/png">
-        <title data-translate="title">PokeSharp - Actualizaciones</title>
+        <title data-translate="title">PokeSharp - Página no encontrada</title>
     </head>
     <body>
         <header>
             <div id="header-container">
                 <div id="logo-container">
-                    <a href="/PokeSharpWeb/"> <img src="multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormal"> </a>
+                    <a href="https://maek0s.github.io/PokeSharpWeb/"> <img src="multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormal"> </a>
                 </div>
                 <nav>
                     <ul>
-                        <li id="descargas"> <a data-translate="descargarNav" href="../PokeSharpWeb/">Descargar</a> </li>
+                        <li id="descargas"> <a data-translate="descargarNav" href="https://maek0s.github.io/PokeSharpWeb/">Descargar</a> </li>
                         <li id="notasParche"> <a data-translate="versionesNav" href="updates">Actualizaciones</a> </li>
                         <li id="discord"> <a data-translate="discordNav" href="https://discord.gg/FqJ6ZgYRrU" target="_blank" rel="noopener noreferrer">Discord</a> </li>
                         <li id="redesSociales"> <a data-translate="redesNav" href="socialMedia">Redes</a> </li>
@@ -32,14 +32,14 @@
         </header>
         <main>
             <div id="firstPage">
-                <h1><a href="../PokeSharpWeb/">¡Página no encontrada!</a></h1>
+                <h1><a href="https://maek0s.github.io/PokeSharpWeb/">¡Página no encontrada!</a></h1>
 
-                <img src="multimedia/images/pikachu.png" alt="Pikachu" id="image">
+                <img src="/PokeSharpWeb/multimedia/images/pikachu.png" alt="Pikachu" id="image">
             </div>
         </main>
         <footer>
             <div id="divFooter">
-                <img src="multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormalFooter">
+                <img src="/PokeSharpWeb/multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormalFooter">
                 <span id="CopyrightTextoFooter">&copy; 2025 PokeSharp</span>
                 <p data-translate="pPropiedadFooter">Todas las texturas, imágenes y otros activos utilizados pertenecen a sus respectivos propietarios.</p>
                 <p data-translate="pAfiliadoFooter">PokeSharp no está afiliado ni a Nintendo, Game Freak, ni a The Pokémon Company.</p>
@@ -53,6 +53,6 @@
         </footer>
 
         <!-- Scripts -->
-        <script src="scripts/scriptTraducciones.js" defer></script>
+        <script src="/PokeSharpWeb/scripts/scriptTraducciones.js" defer></script>
     </body>
 </html>
