--- a/404.html
+++ b/404.html
@@ -13,15 +13,15 @@
         <header>
             <div id="header-container">
                 <div id="logo-container">
-                    <a href="https://maek0s.github.io/PokeSharpWeb/"> <img src="multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormal"> </a>
+                    <a href="https://maek0s.github.io/PokeSharpWeb/"> <img src="/PokeSharpWeb/multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormal"> </a>
                 </div>
                 <nav>
                     <ul>
                         <li id="descargas"> <a data-translate="descargarNav" href="https://maek0s.github.io/PokeSharpWeb/">Descargar</a> </li>
-                        <li id="notasParche"> <a data-translate="versionesNav" href="updates">Actualizaciones</a> </li>
+                        <li id="notasParche"> <a data-translate="versionesNav" href="https://maek0s.github.io/PokeSharpWeb/updates">Actualizaciones</a> </li>
                         <li id="discord"> <a data-translate="discordNav" href="https://discord.gg/FqJ6ZgYRrU" target="_blank" rel="noopener noreferrer">Discord</a> </li>
-                        <li id="redesSociales"> <a data-translate="redesNav" href="socialMedia">Redes</a> </li>
-                        <li id="faq"> <a data-translate="faqNav" href="faq">FAQ</a> </li>
+                        <li id="redesSociales"> <a data-translate="redesNav" href="https://maek0s.github.io/PokeSharpWeb/socialMedia">Redes</a> </li>
+                        <li id="faq"> <a data-translate="faqNav" href="https://maek0s.github.io/PokeSharpWeb/faq">FAQ</a> </li>
                         <li>
                             <img src="/PokeSharpWeb/multimedia/images/banderaEspanya.png" alt="Español" id="spanish-flag" class="flag">
                             <img src="/PokeSharpWeb/multimedia/images/banderaUnitedStates.png" alt="English" id="english-flag" class="flag">
