Cambios generales y optimizacion

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link rel="stylesheet" href="styles/estiloMainPage.css">
         <script src="https://kit.fontawesome.com/15d8dc6e81.js" crossorigin="anonymous"></script>
-        <link rel="icon" href="multimedia/images/pokeSharpLogoProvisional.png" type="image/png">
+        <link rel="icon" href="multimedia/images/logoProvisionalPokeSharp.png" type="image/png">
         <title data-translate="title">PokeSharp - Inicio</title>
     </head>
     <body>
@@ -14,10 +14,10 @@
             <div id="header-container">
                 <div id="logo-container">
                     <!-- Aqui hay un error, se baja un poco y no se centra bien con el atributo <a> -->
-                    <a href=""> <img src="multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormal"> </a>
+                    <a href=""> <img src="multimedia/images/logoProvisionalPokeSharp.png" alt="Logo PokeSharp" id="logoNormal"> </a>
                 </div>
 
-                <nav>
+                <nav class="contenedor-menu__contenedor">
                     <ul>
                         <li id="descargas"> <a data-translate="descargarNav" href="">Descargar</a> </li>
                         <li id="notasParche"> <a data-translate="versionesNav" href="updates">Actualizaciones</a> </li>
@@ -44,8 +44,8 @@
             </div>
             <div id="segundoRectangulo">
                 <h2 data-translate="queEs">¿Qué es PokeSharp?</h2>
-                <p data-translate="queEsP1">Es un juego fangame de Pokémon con una aventura única ¿A qué esperas?</p>
-                <p data-translate="queEsP2">Historia, pokémons únicos y NPCs únicos y entretenidos.</p>
+                <p data-translate="queEsP1">Es un juego fangame de Pokémon con una aventura única.</p>
+                <p data-translate="queEsP2">Historia, pokémons únicos y NPCs nuevos. ¿A qué esperas?</p>
                 <p><i>(Este vídeo es de prueba)</i></p>
                 <div class="video">
                     <!-- AQUI TIENE QUE IR EL TRAILER DEL JUEGO, EL VIDEO QUE SE MUESTRA ES DE PRUEBA -->
@@ -57,14 +57,14 @@
                         <h3 data-translate="minigames" class="content-title">Minijuegos</h3>
                         <p data-translate="text1Minigames">En medio del juego encontrarás minijuegos conocidos y entretenidos, con los que podrás ganar recompensas o pasar un buen rato.</p>
                     </div>
-                    <img src="multimedia/images/fondoParaMinijuegos.png" alt="Minijuegos in-game">
+                    <img src="multimedia/images/imagenMinijuegos.png" alt="Minijuegos in-game">
                 </div>
                 <hr class="separateCategories">
                 <div class="content-section reves">
                     <img src="multimedia/images/imagenNPCs.png" alt="NPCs únicos" class="content-image">
                     <div class="content-text">
-                        <h3 data-translate="uniqueNpcs" class="content-title">NPCs únicos</h3>
-                        <p data-translate="textNpcs">Encontrarás NPCs a lo largo de tu aventura, completamente nuevos, personas reales con guiños a cosas relacionadas con esa persona en la vida real.</p>
+                        <h3 data-translate="uniqueNpcs" class="content-title">NPCs nuevos</h3>
+                        <p data-translate="textNpcs">Encontrarás NPCs a lo largo de tu aventura, completamente originales, personas reales con guiños a cosas relacionadas con esa persona en la vida real.</p>
                     </div>
                 </div>
                 <!-- pokemons unicos? -->
@@ -73,24 +73,24 @@
                 <h3 data-translate="hechoCon" class="retroFont">Hecho con</h3>
                 <div id="hechoConDiv" class="image-container">
                     <div class="image-item">
-                        <img src="multimedia/images/logoCSharp2.png" alt="C# Logo" class="image">
+                        <img src="multimedia/images/logoCSharp.png" alt="CSharp Logo" class="image">
                         <div class="tooltip">C#</div>
                     </div>
                     <div class="image-item">
-                        <img src="multimedia/images/godotEngineLogo.png" alt="Godot Engine Logo" class="image">
+                        <img src="multimedia/images/logoGodotEngine.png" alt="Godot Engine Logo" class="image">
                         <div class="tooltip">Godot Engine</div>
                     </div>
-                   <!-- Falta ajustarlo <div class="image-item">
-                        <img src="multimedia/images/supabaseLogo.png" alt="Supabase Logo" class="image">
+                    <div class="image-item">
+                        <img src="multimedia/images/logoSupabase.png" alt="Supabase Logo" class="image">
                         <div class="tooltip">Supabase</div>
-                    </div>-->
+                    </div>
                 </div>
             </div>
         </main>
 
         <footer>
             <div id="divFooter">
-                <img src="multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormalFooter">
+                <img src="multimedia/images/logoProvisionalPokeSharp.png" alt="Logo PokeSharp" id="logoNormalFooter">
                 <span id="CopyrightTextoFooter">&copy; 2025 PokeSharp</span>
                 <p data-translate="pPropiedadFooter">Todas las texturas, imágenes y otros activos utilizados pertenecen a sus respectivos propietarios.</p>
                 <p data-translate="pAfiliadoFooter">PokeSharp no está afiliado ni a Nintendo, Game Freak, ni a The Pokémon Company.</p>
@@ -106,5 +106,6 @@
         <!-- Scripts -->
         <script src="scripts/scriptTraducciones.js" defer></script>
         <script src="scripts/scriptsHome.js" defer></script>
+        <script src="scripts/scriptNav.js" defer></script>
     </body>
 </html>
