--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
             <div id="header-container">
                 <div id="logo-container">
                     <!-- Aqui hay un error, se baja un poco y no se centra bien con el atributo <a> -->
-                    <a href=""> <img src="multimedia/images/logoProvisionalPokeSharp.png" alt="Logo PokeSharp" id="logoNormal"> </a>
+                    <img src="multimedia/images/logoProvisionalPokeSharp.png" alt="Logo PokeSharp" id="logoNormal">
                 </div>
 
-                <nav class="contenedor-menu__contenedor">
+                <nav>
                     <ul>
                         <li id="descargas"> <a data-translate="descargarNav" href="">Descargar</a> </li>
                         <li id="notasParche"> <a data-translate="versionesNav" href="updates">Actualizaciones</a> </li>
                         <li id="discord"> <a data-translate="discordNav" href="https://discord.gg/FqJ6ZgYRrU" target="_blank" rel="noopener noreferrer">Discord</a> </li>
-                        <li id="faq"> <a data-translate="faqNav" href="faq">FAQ</a> </li>
+                        <li id="faq"><a data-translate="faqNav" href="faq">FAQ</a></li>
                         <li>
                             <img src="multimedia/images/banderaEspanya.png" alt="Español" id="spanish-flag" class="flag">
                             <img src="multimedia/images/banderaUnitedStates.png" alt="English" id="english-flag" class="flag">
