--- a/faq/index.html
+++ b/faq/index.html
@@ -38,12 +38,11 @@
         <div id="secondPage">
             <div>
                 <h2 data-translate="faq1">1. ¿Cómo puedo jugarlo?</h2>
-                <p data-translate="faq1P1">Puedes jugarlo, en un principio en PC, próximamente podría salir en móvil.</p>
-                <p data-translate="faq1P2">El enlace de descarga es: <a href="https://maek0s.github.io/PokeSharpWeb/">Pendiente.</a></p>
+                <p data-translate="faq1P1">Puedes jugarlo, en un principio en PC, próximamente podría salir en móvil. El enlace de descarga es: <a href="https://maek0s.github.io/PokeSharpWeb/">Pendiente.</a></p>
 
                 <h2 data-translate="faq2">2. ¿Qué es PokeSharp?</h2>
-                <p data-translate="faq2P1">PokeSharp es un juego fangame de Pokémon, desarrollado por una única persona,</p>
-                <p data-translate="faq2P2">con el propósito de crear un juego muy distinto a los fangames de Pokémon y sea innovador y divertido.</p>
+                <p data-translate="faq2P1">PokeSharp es un juego fangame de Pokémon, desarrollado por una única persona, con el propósito de crear un juego muy distinto a los fangames de Pokémon y sea innovador y divertido.</p>
+                <p data-translate="faq2P2"></p>
 
                 <h2 data-translate="faq3">3. ¿Cuándo estará disponible oficialmente?</h2>
                 <p data-translate="faq3P1">PokeSharp aún está en desarrollo, por lo que no hay una fecha de lanzamiento oficial.</p>
