--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
         <header>
             <div id="header-container">
                 <div id="logo-container">
-                    <!-- Aqui hay un error, se baja un poco y no se centra bien con el atributo <a> -->
-                    <img src="multimedia/images/logoProvisionalPokeSharp.png" alt="Logo PokeSharp" id="logoNormal">
+                    <img src="multimedia/images/logoProvisionalPokeSharp.png" alt="Logo PokeSharp" id="logoNormal" onclick="window.location.href='';">
                 </div>
 
                 <nav>
                     <ul>
-                        <li id="descargas"> <a data-translate="descargarNav" href="">Descargar</a> </li>
-                        <li id="notasParche"> <a data-translate="versionesNav" href="updates">Actualizaciones</a> </li>
-                        <li id="discord"> <a data-translate="discordNav" href="https://discord.gg/FqJ6ZgYRrU" target="_blank" rel="noopener noreferrer">Discord</a> </li>
+                        <li id="descargas"><a data-translate="descargarNav" href="">Descargar</a> </li>
+                        <li id="notasParche"><a data-translate="versionesNav" href="updates">Actualizaciones</a></li>
+                        <li id="discord"><a data-translate="discordNav" href="https://discord.gg/FqJ6ZgYRrU" target="_blank" rel="noopener noreferrer">Discord</a> </li>
                         <li id="faq"><a data-translate="faqNav" href="faq">FAQ</a></li>
                         <li>
                             <img src="multimedia/images/banderaEspanya.png" alt="Español" id="spanish-flag" class="flag">
@@ -104,6 +103,6 @@
         <!-- Scripts -->
         <script src="scripts/scriptTraducciones.js" defer></script>
         <script src="scripts/scriptsHome.js" defer></script>
-        <script src="scripts/scriptNav.js" defer></script>
+        <!--<script src="scripts/scriptNav.js" defer></script>-->
     </body>
 </html>
