--- a/faq/index.html
+++ b/faq/index.html
@@ -42,33 +42,24 @@
 
                 <h2 data-translate="faq2">2. ¿Qué es PokeSharp?</h2>
                 <p data-translate="faq2P1">PokeSharp es un juego fangame de Pokémon, desarrollado por una única persona, con el propósito de crear un juego muy distinto a los fangames de Pokémon y sea innovador y divertido.</p>
-                <p data-translate="faq2P2"></p>
 
                 <h2 data-translate="faq3">3. ¿Cuándo estará disponible oficialmente?</h2>
-                <p data-translate="faq3P1">PokeSharp aún está en desarrollo, por lo que no hay una fecha de lanzamiento oficial.</p>
-                <p data-translate="faq3P2">Puedes seguir el progreso en el <a href="https://discord.gg/FqJ6ZgYRrU">servidor de Discord</a>.</p>
+                <p data-translate="faq3P1">PokeSharp aún está en desarrollo, por lo que no hay una fecha de lanzamiento oficial. Puedes seguir el progreso en el <a href="https://discord.gg/FqJ6ZgYRrU">servidor de Discord</a>.</p>
 
                 <h2 data-translate="faq4">4. ¿Por qué se creó PokeSharp?</h2>
-                <p data-translate="faq4P1">PokeSharp tuvo muchas antiguas facetas, fueron intentos de hacer un juego sobre Pokémon como fuera posible,</p>
-                <p data-translate="faq4P2">pero al final terminó siendo un proyecto de final de curso para el grado superior DAM.</p>
+                <p data-translate="faq4P1">PokeSharp tuvo muchas antiguas facetas, fueron intentos de hacer un juego sobre Pokémon como fuera posible, pero al final terminó siendo un proyecto de final de curso para el grado superior DAM.</p>
 
                 <h2 data-translate="faq5">5. ¿Cómo surgió la idea?</h2>
-                <p data-translate="faq5P1">La idea se creó 1 año antes de su creación, por una persona distinta al creador, fue <a href="https://github.com/izancluac">Izan</a>, mi compañero de clase,</p>
-                <p data-translate="faq5P2">el cual intentó hacer algo por terminal con Java, y decidí preguntarle a unirme a su proyecto, yo me encargue de</p>
-                <p data-translate="faq5P3">las interfaces, pero al final no se pudo por conocimiento y falta de tiempo, y 1 año después apareció que teníamos que</p>
-                <p data-translate="faq5P4">hacer un proyecto individualmente, y decidí preguntarle si podía seguir empezando desde 0 de otra forma, obtuve el permiso,</p>
-                <p data-translate="faq5P5">cambié el nombre de PokeJava a PokeSharp, ya que antes se planteó en hacer en Java y... aquí estamos.</p>
+                <p data-translate="faq5P1">La idea se creó 1 año antes de su creación, por una persona distinta al creador, fue <a href="https://github.com/izancluac">Izan</a>, mi compañero de clase, el cual intentó hacer algo por terminal con Java, y decidí preguntarle a unirme a su proyecto, yo me encargue de las interfaces, pero al final no se pudo por conocimiento y falta de tiempo, y 1 año después apareció que teníamos que hacer un proyecto individualmente, y decidí preguntarle si podía seguir empezando desde 0 de otra forma, obtuve el permiso, cambié el nombre de PokeJava a PokeSharp, ya que antes se planteó en hacer en Java y... aquí estamos.</p>
 
                 <h2 data-translate="faq6">6. ¿De dónde viene el nombre de PokeSharp?</h2>
-                <p data-translate="faq6P1">El nombre de PokeSharp viene de su nombre antiguo PokeJava, que sugerí en su momento y finalmente al</p>
-                <p data-translate="faq6P2">cambiar de lenguaje de programación, decidí cambiar el nombre a PokeSharp, ya que me gustó más.</p>
+                <p data-translate="faq6P1">El nombre de PokeSharp viene de su nombre antiguo PokeJava, que sugerí en su momento y finalmente al cambiar de lenguaje de programación, decidí cambiar el nombre a PokeSharp, ya que me gustó más.</p>
 
                 <h2 data-translate="faq7">7. ¿Qué se necesita para jugar?</h2>
                 <p data-translate="faq7P1">Los requisitos mínimos y recomendados están pendientes pero debería ser bastante accesible.</p>
 
                 <h2 data-translate="faq8">8. ¿Puedo colaborar?</h2>
-                <p data-translate="faq8P1">Por el momento no es posible, en un futuro si sigue el proyecto podría ser una opción.</p>
-                <p data-translate="faq8P2">Cualquier tipo de sugerencia/bug se agradece siempre si quieres intentar ayudar ^^</p>
+                <p data-translate="faq8P1">Por el momento no es posible, en un futuro si sigue el proyecto podría ser una opción. Cualquier tipo de sugerencia/bug se agradece siempre si quieres intentar ayudar ^^</p>
             </div>
             <img src="../multimedia/images/Ash.png">
         </div>
