--- a/updates/index.html
+++ b/updates/index.html
@@ -14,7 +14,7 @@
         <header>
             <div id="header-container">
                 <div id="logo-container">
-                    <a href="../"> <img src="../multimedia/images/logoProvisionalPokeSharp.png" alt="Logo PokeSharp" id="logoNormal"> </a>
+                    <img src="../multimedia/images/logoProvisionalPokeSharp.png" alt="Logo PokeSharp" id="logoNormal" onclick="window.location.href='../';">
                 </div>
                 <nav>
                     <ul>
