--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/PokeSharpWeb/styles/estiloNotFound.css">
         <script src="https://kit.fontawesome.com/15d8dc6e81.js" crossorigin="anonymous"></script>
         <link rel="icon" href="/PokeSharpWeb/multimedia/images/logoProvisionalPokeSharp.png" type="image/png">
-        <title data-translate="title">PokeSharp - Página no encontrada</title>
+        <title data-translate="titleNotFound">PokeSharp - Página no encontrada</title>
     </head>
     <body>
         <header>
