--- a/faq/index.html
+++ b/faq/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="../styles/estiloFAQ.css">
         <script src="https://kit.fontawesome.com/15d8dc6e81.js" crossorigin="anonymous"></script>
         <link rel="icon" href="../multimedia/images/logoProvisionalPokeSharp.png" type="image/png">
-        <title data-translate="title">PokeSharp - FAQ</title>
+        <title data-translate="titleFAQ">PokeSharp - FAQ</title>
     </head>
     <body>
         <header>
