--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="styles/estiloMainPage.css">
         <script src="https://kit.fontawesome.com/15d8dc6e81.js" crossorigin="anonymous"></script>
         <link rel="icon" href="multimedia/images/logoProvisionalPokeSharp.png" type="image/png">
-        <title data-translate="title">PokeSharp - Inicio</title>
+        <title data-translate="titleHome">PokeSharp - Inicio</title>
     </head>
     <body>
         <header>
