Alpha released y descargable

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <main>
             <div id="rectanguloGrande">
-                <h2 id="versionJuego" data-translate="versionJuego">En desarrollo</h2>
+                <h2 id="versionJuego" data-translate="versionJuego">Alpha released</h2>
                 <button class="button" id="btnDownload" onclick="download()">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"><g stroke-width="0" id="SVGRepo_bgCarrier"></g>
                 <g stroke-linejoin="round" stroke-linecap="round" id="SVGRepo_tracerCarrier"></g><g id="SVGRepo_iconCarrier">
