--- a/updates/index.html
+++ b/updates/index.html
@@ -42,15 +42,27 @@
             <div class="update">
                 <details>
                     <summary>
-                        <span>v0.0.1 - En desarrollo</span>
+                        <span>v1.0.0alpha - Released</span>
                         <i class="fa-solid fa-plus"></i>
                     </summary>
-                    <p>Actualmente se está trabajando en la primera versión del juego.</p>
+                    <p>Actualmente hay una versión alfa para el juego con contenido básico.</p>
+                    <p>Contiene:</p>
+                    <li class="update-item">Inicio de sesión y registro de cuentas</li>
+                    <li class="update-item">Conexión y almacenamiento en bases de datos de los pokémons</li>
+                    <li class="update-item">Captura de pokémons con animaciones</li>
+                    <li class="update-item">Sistema de interiores</li>
+                    <li class="update-item">Música incorporada</li>
+                    <p>Enlace para instalar:</p>
+                    <div class="update-item github-link">
+                        <a href="https://github.com/Maek0s/PokeSharp/releases/tag/v1.0.0-apha" target="_blank" rel="noopener noreferrer">
+                            <img width="20" src="../multimedia/images/githubLogo.png" alt="GitHub logo"/> GitHub
+                        </a>
+                    </div>
                 </details>
             </div>
 
             <h2>Versiones anteriores</h2>
-            <div class="update">
+<!--            <div class="update">
                 <details>
                     <summary>
                         <span>v0.0.0 - Pre-Alpha</span>
@@ -69,7 +81,7 @@
                     <p>No existe esta versión todavia.</p>
                 </details>
             </div>
-        </div>
+        </div>-->
 
         <!-- Scripts -->
         <script src="../scripts/scriptTraducciones.js" defer></script>
