--- a/updates/index.html
+++ b/updates/index.html
@@ -39,7 +39,7 @@
         <div id="secondPage">
             <h2 data-translate="lastVersion">Última versión</h2>
             <div id="latest-version-container"></div>
-            <!--<div class="update">
+            <div class="update">
                 <details>
                     <summary>
                         <span>v1.0.0alpha - Released</span>
@@ -58,8 +58,9 @@
                             <img width="20" src="../multimedia/images/githubLogo.png" alt="GitHub logo"/> GitHub
                         </a>
                     </div>
+                    <br>
                 </details>
-            </div>-->
+            </div>
 
             <h2>Versiones anteriores</h2>
 <!--            <div class="update">
